Archive2/55/199811d96f1af7/output
+ g++-4.8 -std=c++1y -O3 -Wall -pedantic -Wextra -pthread -Wno-unused-variable -Wno-unused-parameter -Wconversion main.cpp
+ ./a.out
+ g++-4.9 -std=c++1y -O3 -Wall -pedantic -Wextra -pthread -Wno-unused-variable -Wno-unused-parameter -Wconversion main.cpp
main.cpp: In function ‘int main()’:
main.cpp:4:3: error: ‘constexpr NonStack::NonStack()’ is private
   NonStack() = default;
   ^
main.cpp:13:14: error: within this context
     NonStack a;
              ^
